--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>service-acl</module>
+        <module>service-sys</module>
+        <module>service-product</module>
     </modules>
 
     <properties>
