--- a/service/service-search/pom.xml
+++ b/service/service-search/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>service-activity-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
