--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,6 +20,8 @@
         <module>service-activity</module>
         <module>service-user</module>
         <module>service-home</module>
+        <module>service-cart</module>
+        <module>service-order</module>
     </modules>
 
     <properties>
