--- a/common/common-util/pom.xml
+++ b/common/common-util/pom.xml
@@ -41,11 +41,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>service-activity-client</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.example</groupId>-->
+<!--            <artifactId>service-activity-client</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--    </dependency>-->
     </dependencies>
 
 </project>
