--- a/service_gateway/pom.xml
+++ b/service_gateway/pom.xml
@@ -35,6 +35,15 @@
         </dependency>
 
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.8</version>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
